# ape

./: CLAUDE.md  LICENSE  Makefile  README.md  ape.py  ape_linux.py  justfile  pyproject.toml  test_ape.py
.github/workflows/: publish.yaml  tests.yaml
src/ape/: cli.py  errors.py  llm.py
src/ape_linux/: __init__.py  app.py
tests/: conftest.py  test_app.py  test_cli.py  test_llm.py
