[tool.poetry]
name = "ape-linux"
version = "0.2.0"
description = "AI for Linux commands"
license = "MIT"
authors = ["Seto Balian <seto.balian@gmail.com>"]
maintainers = ["Seto Balian <seto.balian@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/sbalian/ape"
repository = "https://github.com/sbalian/ape"
keywords = ["ai", "llm", "linux", "openai"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
]
packages = [
    { include = "ape.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
openai = "^1.30.3"
rich = "^13.7.1"

[tool.poetry.scripts]
ape = "ape:app"

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
pytest = "^8.2.1"
ruff = "^0.4.5"
pyright = "^1.1.364"

[tool.pyright]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
]
