[project]
name = "ape-linux"
version = "0.3.0"
description = "AI for Linux commands"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    { name = "Seto Balian", email = "seto.balian@gmail.com" }
]
maintainers = [
    { name = "Seto Balian", email = "seto.balian@gmail.com" }
]
keywords = ["ai", "llm", "linux", "openai"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.76.0",
    "rich>=14.0.0",
    "typer>=0.15.2",
]

[project.urls]
Homepage = "https://github.com/sbalian/ape"
Repository = "https://github.com/sbalian/ape"

[project.scripts]
ape = "ape_linux.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[tool.pyright]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["ape_linux"]
