[project]
name = "ape-linux"
version = "0.4.0"
description = "AI for Linux commands"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    { name = "Seto Balian", email = "seto.balian@gmail.com" }
]
maintainers = [
    { name = "Seto Balian", email = "seto.balian@gmail.com" }
]
keywords = ["ai", "llm", "linux", "openai", "anthropic", "pydantic-ai"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai-slim[anthropic,google,groq,mistral,openai]>=1.104.0",
]

[project.urls]
Homepage = "https://github.com/sbalian/ape"
Repository = "https://github.com/sbalian/ape"

[project.scripts]
ape = "ape_linux:main"
ape-system-info = "ape_linux:system_info"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
    "ty>=0.0.40",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["ape_linux"]
